# gradio-fastapi-auth0

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
application/: app.py
application/interfaces/: logout.py  main_app.py
interfaces/: login.py
